# job_work_keish

./: README.md  pyproject.toml
.github/workflows/: ci.yml
job_work/: hooks.py  modules.txt  upi.py
job_work/job_work/custom/: customer.json  delivery_note.json  delivery_note_item.json  item.json  item_barcode.json  packed_item.json  purchase_receipt.json  purchase_receipt_item.json  stock_entry.json  stock_entry_detail.json  supplier.json
job_work/job_work/doctype/emp_machine_job/: emp_machine_job.js  emp_machine_job.json  emp_machine_job.py  test_emp_machine_job.py
job_work/job_work/doctype/inward/: inward.json  inward.py
job_work/job_work/doctype/jobwork_setting/: jobwork_setting.js  jobwork_setting.json  jobwork_setting.py  test_jobwork_setting.py
job_work/job_work/doctype/machine_job_item/: machine_job_item.json  machine_job_item.py
job_work/job_work/doctype/outward/: outward.json  outward.py
job_work/job_work/doctype/set_cr_mr_weight/: set_cr_mr_weight.js  set_cr_mr_weight.json  set_cr_mr_weight.py  test_set_cr_mr_weight.py
job_work/job_work/doctype/stock_statement/: stock_statement.js  stock_statement.json  stock_statement.py  test_stock_statement.py
job_work/job_work/doctype/stock_statement_reg/: stock_statement_reg.js  stock_statement_reg.json  stock_statement_reg.py  test_stock_statement_reg.py
job_work/job_work/doctype/vehicle_master/: test_vehicle_master.py  vehicle_master.js  vehicle_master.json  vehicle_master.py
job_work/public/js/: delivery_note.js  purchase_receipt.js
